--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@preact/preset-vite": "^2.10.2",
     "@preact/signals": "^2.3.2",
-    "@tailwindcss/vite": "^4.1.11",
     "@wailsio/runtime": "latest",
-    "daisyui": "^5.0.50",
-    "preact": "^10.27.2",
-    "tailwindcss": "^4.1.11"
+    "preact": "^10.27.2"
   },
   "devDependencies": {
+    "daisyui": "^5.0.50",
+    "@tailwindcss/vite": "^4.1.11",
+    "tailwindcss": "^4.1.11",
+    "@preact/preset-vite": "^2.10.2",
     "vite": "^5.0.0"
   }
 }
