--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,9 +2,9 @@ version: '3'
 
 includes:
   common: ./build/Taskfile.yml
-  windows: ./build/windows/Taskfile.yml
   darwin: ./build/darwin/Taskfile.yml
-  linux: ./build/linux/Taskfile.yml
+  # windows: ./build/windows/Taskfile.yml
+  # linux: ./build/linux/Taskfile.yml
 
 vars:
   APP_NAME: "dibba"
